replace temp content with my info

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Janvher Lucas Sarmiento</h1>
+						<p>BSCS-3A &nbsp;&bull;&nbsp; CSST-102 &nbsp;&bull;&nbsp; Basic Machine Learning</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<li><a href="https://www.linkedin.com/in/janvher-lucas-sarmiento-4a0017379/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+								<li><a href="https://github.com/janvhersarmiento/CSST102-3A" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sarmientojanvher%40gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Modified and Maintained by: <a href="https://www.facebook.com/janvherlucas.sarmiento" target="_blank">Janvher</a>.</span>
 					</footer>
 
 			</div>
